[tool.poetry]
name = "pdf-redactor"
version = "0.1.0"
description = ""
authors = ["Shaan Savarirayan <shaan.savarirayan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymupdf = "1.23.26"
tqdm = "^4.66.4"
click = "^8.1.7"


[tool.poetry.scripts]
pdf-redactor = "pdf_redactor.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
